(lang dune 3.5)

(name monte)

(generate_opam_files true)

(source
 (github kituyiharry/reponame))

(authors "Harry K")

(maintainers "Harry K")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name monte)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
